# db_vgames

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
provision/: README.md  requirements.txt
provision/app/: .dockerignore  Dockerfile
scripts/: prepare-commit-message.sh  run_tests.sh
src/: .coveragerc  alembic.ini  pytest.ini
src/alembic/: env.py
src/alembic/versions/: 6c995e029e9f_add_tag_table.py  89944f8b35b3_db_games_model_migrations.py
src/app/core/: client.py  config.py  main.py
src/app/core/api/: client.py
src/app/db/: async_db.py  base.py  base_class.py  session.py  utils.py
src/app/graph/company/: mutations.py  resolvers.py  schema.py
src/app/graph/console/: mutations.py  resolvers.py  schema.py  types.py
src/app/models/: __init__.py  association.py  company.py  console.py  franchise.py  game.py  tag.py  test.py
src/app/schemas/: __init__.py  company.py  console.py  game.py
src/app/tests/: conftest.py
src/app/tests/api/: test_company.py  test_console.py  test_main.py
src/app/tests/setup/: test_setup.py
src/core/: config.py  main.py
src/db/: base.py
src/models/: test.py
